/*
 * Copyright (c) 2025 Tim Savage.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 *
 */

package com.winterhavenmc.savagegraveyards.models.graveyard;

import com.winterhavenmc.library.messagebuilder.core.ports.pipeline.accessors.location.Locatable;
import com.winterhavenmc.savagegraveyards.models.displayname.ValidDisplayName;
import com.winterhavenmc.savagegraveyards.models.graveyard.attributes.Attributes;
import com.winterhavenmc.savagegraveyards.models.location.ValidLocation;
import com.winterhavenmc.savagegraveyards.models.searchkey.ValidSearchKey;
import org.bukkit.Bukkit;
import org.bukkit.Location;


public record ValidGraveyard(ValidDisplayName displayName, Attributes attributes,
                             ValidLocation location) implements Graveyard, Locatable
{
	public Location getLocation()
	{
		return new Location(Bukkit.getWorld(location.world().uid()),
				location.x(), location.y(), location.z(), location.yaw(), location.pitch());
	}

	public String worldName()
	{
		return location().world().name();
	}

	public ValidSearchKey searchKey()
	{
		return this.displayName.searchKey();
	}
}
