@startuml

' === GLOBAL STYLING ===
skinparam backgroundColor #f9f9f9
skinparam shadowing true
skinparam roundCorner 15
skinparam ArrowColor #444444
skinparam ArrowThickness 1.2
skinparam ArrowFontSize 11
skinparam packageTitleFontSize 14
skinparam classFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor white
  BorderColor #888888
}
skinparam class {
  BackgroundColor<<entity>> #cfefff
    BackgroundColor<<entity-valid>> #e6ffe6
  BackgroundColor<<entity-invalid>> #ffe6e6
}


'package SavageGraveyards {
'    package models {
        package graveyard {
            interface Graveyard <<entity>> {
                + of(plugin: Plugin, displayName: ValidDisplayName, player: Player): Graveyard
                + of(displayName: ValidDisplayName, attributes: Attributes, location: ValidLocation): Graveyard
                + displayName(): DisplayName
                + getDisplayName(): String
                + worldName(): String
            }
            class ValidGraveyard <<entity-valid>> {
                - attributes: Attributes
                - displayName: ValidDisplayName
                - location: ValidLocation
                --
                + attributes(): Attributes
                + displayName(): ValidDisplayName
                + location(): ValidLocation
                + searchKey(): ValidSearchKey
                + worldName(): String
            }
            class InvalidGraveyard <<entity-invalid>> {
                -   displayName: DisplayName
                -   graveyardFailReason: FailReason
                -   parameter: Parameter
                -   worldName: String
                --
                + displayName(): DisplayName
                + graveyardFailReason(): FailReason
                + parameter(): Parameter
                + worldName(): String
            }
            Graveyard <-- ValidGraveyard
            Graveyard <-- InvalidGraveyard
        }
'    }
'}

@enduml
